fix breaking on firefox

--- a/www/src/css/custom.css
+++ b/www/src/css/custom.css
@@ -192,13 +192,13 @@ article {
   @apply h-8;
 }
 
-@media only screen and (max-width: 1086px) and (min-width: 996px) {
+@media only screen and (max-width: 1087px) and (min-width: 996px) {
   .DocSearch-Button-Keys {
     display: none !important;
   }
 }
 
-@media only screen and (max-width: 1086px) {
+@media only screen and (max-width: 1087px) {
   .navbar__logo {
     margin-right: 0;
   }
